--- a/public/index.css
+++ b/public/index.css
@@ -85,8 +85,10 @@ body {
 form {
   border-top: 1px solid grey;
   background: #fff;
+  display: flex;
+  justify-content: space-between;
   position: absolute;
-  bottom: 5%;
+  bottom: 4%;
   left: 320px;
   width: calc(98% - 360px);
 }
@@ -105,11 +107,13 @@ input::placeholder {
 
 form button {
   color: white;
-  background: #2a8bf2;
+  background: url('./assets/send-icon.png');
+  background-size: contain;
   border: none;
   padding: 10px;
-  margin: 10px 10px 0 10px;
-  width: 120px;
+  margin: 10px;
+  height: 60px;
+  width: 60px;
 }
 
 #messages {
@@ -199,7 +203,7 @@ form button {
   height: 1px;
   position: relative;
   vertical-align: middle;
-  width: 30%;
+  width: 24%;
 }
 
 .new-connection:before,
@@ -263,7 +267,6 @@ form button {
 
   form {
     border-top: none;
-    bottom: 4%;
     left: 2%;
     width: 96%;
   }
